syntax = "proto3";
package KafkaSchemaEvolutioner.Tests.Proto.Generated;
import "protobuf-net/bcl.proto"; // schema for protobuf-net's handling of core .NET types

message SampleEventKey {
    message SampleEventKey2 {
       .bcl.Guid Prop1 = 1;
       optional .bcl.Guid Prop2 = 2;
       optional .bcl.Guid Prop3 = 3;
       .bcl.Guid Prop4 = 4;
    }
   .bcl.Guid Prop1 = 1;
   optional .bcl.Guid Prop2 = 2;
   optional .bcl.Guid Prop3 = 3;
   .bcl.Guid Prop4 = 4;
}

